--- a/.github/workflows/branch_deployments.yml
+++ b/.github/workflows/branch_deployments.yml
@@ -13,6 +13,10 @@ env:
   ENABLE_FAST_DEPLOYS: 'true'
   PYTHON_VERSION: '3.8'
   DAGSTER_CLOUD_FILE: 'dagster_cloud.yaml'
+  POSTGRES_DBNAME: ${{ secrets.POSTGRES_DBNAME }}
+  POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+  POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+  POSTGRES_PWD: ${{ secrets.POSTGRES_PWD }}
 
 jobs:
   dagster_cloud_default_deploy:
