--- a/models/staging/source.yml
+++ b/models/staging/source.yml
@@ -19,6 +19,7 @@ sources:
       - name: player_stats_detailed
       - name: players
       - name: referees
+        identifier: id
       - name: regions
       - name: rouds
       - name: seasons
