--- a/dagster_fanareas/requirements.txt
+++ b/dagster_fanareas/requirements.txt
@@ -3,10 +3,8 @@ dagster-webserver==1.6.0
 dbt-core==1.7.0
 dbt-extractor==0.5.1
 dbt-postgres==1.7.0
-numpy==1.26.3
-pandas==2.1.4
 psycopg2-binary==2.9.9
 pyaml==23.12.0
 pytest==7.4.4
-requests==2.31.0
-SQLAlchemy==2.0.25
+requests
+pandas
