--- a/dagster_fanareas/requirements.txt
+++ b/dagster_fanareas/requirements.txt
@@ -1,10 +1,10 @@
-dagster-postgres==0.22.2
-dagster-webserver==1.6.0
-dbt-core==1.7.0
-dbt-extractor==0.5.1
-dbt-postgres==1.7.0
-psycopg2-binary==2.9.9
-pyaml==23.12.0
-pytest==7.4.4
+dagster-postgres
+dagster-webserver
+dbt-core
+dbt-extractor
+dbt-postgres
+psycopg2-binary
+pyaml
+pytest
 requests
 pandas
