stats_by_player_team

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,6 +23,6 @@ models:
   fanareas:
       materialized: table
       staging:
-        materialized: view
+        materialized: table
       mart:
         materialized: table
