--- a/models/source.yml
+++ b/models/source.yml
@@ -48,4 +48,11 @@ sources:
       - name: titles
       - name: transfer
       - name: transfer_records
+      - name: tm_dim_player_stats
+      - name: tm_dim_top_players_by_value
+      - name: tm_dim_top_league_players
+      - name: tm_player_images
+      - name: tm_dim_goalkeepers_with_goals
+      - name: dim_player_transfers
+      - name: played_for_multiple_clubs
   
